2014-02-19  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1965: Update PaX support to detect running PaX
	kernel and use newer tools
	* NEWS: Updated.
	* acinclude.m4:
	(IT_HAS_PAX): New macro to detect whether the running
	kernel uses PaX.
	(IT_WITH_PAX): Rewritten to search for PaX tools -
	currently paxmark.sh, paxctl-ng, chpax and paxctl -
	and fail if a tool isn't found and a PaX kernel is
	being used.

2014-08-28  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(icedtea): Fix path to finished image.
	(icedtea-debug): Likewise.
	(icedtea-boot): Likewise.

2012-05-21  Andrew John Hughes  <ahughes@redhat.com>

	* AUTHORS: Add Ralph Sennhauser.

2012-02-03  Ralph Sennhauser <sera@gentoo.org>

	* Makefile.am:
	(icedtea): Run pax-mark-vm on the just-built image.
	(icedtea-debug): Likewise.
	(icedtea-boot): Likewise.
	* acinclude.m4:
	(IT_WITH_PAX): Check for a pax command being specified.
	* configure.ac:
	Call IT_WITH_PAX.
	* pax-mark-vm.in:
	Script to PaX mark a JDK image.

2014-08-28  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(OPENJDK_VERSION): Bump to b23.
	(CORBA_CHANGESET): Update to icedtea-3.0.0pre02 tag.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(NASHORN_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	(NASHORN_SHA256SUM): Likewise.
	(ICEDTEA_MAJOR): Split out major release name ('icedtea8')
	(NASHORN_URL): Removed.
	(OPENJDK_SRC_ZIP): Change suffix to xz.
	(CORBA_SRC_ZIP): Likewise.
	(JAXP_SRC_ZIP): Likewise.
	(JAXWS_SRC_ZIP): Likewise.
	(JDK_SRC_ZIP): Likewise.
	(LANGTOOLS_SRC_ZIP): Likewise.
	(HOTSPOT_SRC_ZIP): Likewise.
	(NASHORN_SRC_ZIP): Likewise.
	(ICEDTEA_CONFIGURE): Pass --with-lcms using either
	'system' or 'bundled' as needed.